# reading-observatory

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml  weekly-feeds.yml
bibliographies/: ai-human-collaboration.yaml  creative-practice.yaml  institutional-design.yaml  systems-thinking.yaml
config/: scoring.yaml
docs/: data-contract-surfaced-items.md
docs/adr/: 001-initial-architecture.md  002-curation-philosophy.md
ecosystem/pillar-dna/: content.yaml
feeds/: seen.json  subscriptions.opml  surfaced.json
src/: aggregator.py  bibliographies.py  config.py  feeds.py  matcher.py  newsletter.py
tests/: test_aggregator.py  test_bibliographies.py  test_config.py  test_feeds.py  test_matcher.py  test_newsletter.py
tests/fixtures/: essays-index-sample.json  invalid-bibliography.yaml  malformed-feed.xml  sample-atom.xml  sample-feed.xml  sample-subscriptions.opml  seen-with-entries.json  surfaced-with-entries.json  valid-bibliography.yaml
